--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,5 +44,8 @@ jobs:
       - name: Install dependencies 👨🏻‍💻
         run: yarn
 
+      - name: Generate static files 📁
+        run: yarn run generate
+
       - name: Deploy web 🕸️
         run: yarn run deploy
