--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,4 +48,4 @@ jobs:
         run: yarn run generate
 
       - name: Deploy web 🕸️
-        run: yarn run deploy
+        run: git config --local user.email "keyeducation2544@gmail.com" && git config --local user.name "Intouch Yutinatorn" && yarn run deploy
