--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.2",
-    "bootstrap": "^4.5.2",
+    "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
+    "mdbvue": "^6.7.1",
     "nuxt": "^2.14.6"
   },
   "devDependencies": {
