--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "deploy": "yarn run deploy && gh-pages -d dist"
+    "deploy": "yarn run generate && gh-pages -d dist"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.2",
