--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate",
+    "generate": "NODE_ENV=production nuxt generate",
     "deploy": "yarn run generate && gh-pages -d dist"
   },
   "dependencies": {
@@ -14,7 +14,6 @@
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
-    "mdbvue": "^6.7.1",
     "nuxt": "^2.14.6"
   },
   "devDependencies": {
