--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "NODE_ENV=production nuxt generate",
-    "deploy": "yarn run generate && gh-pages -d dist"
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.2",
@@ -22,7 +22,8 @@
     "gh-pages": "^3.1.0",
     "husky": "^4.3.0",
     "prettier": "^2.1.2",
-    "pretty-quick": "^3.1.0"
+    "pretty-quick": "^3.1.0",
+    "push-dir": "^0.4.1"
   },
   "husky": {
     "hooks": {
